--- a/index.html
+++ b/index.html
@@ -63,25 +63,33 @@
             transition: background 0.3s;
         }
         body.light #search { background: #ddd; color: #333; }
-        .categories {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
+        .dropdown-section {
+            margin: 20px 0;
         }
+        select {
+            width: 100%;
+            max-width: 300px;
+            padding: 10px;
+            background: #2a2a2a;
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            font-size: 1em;
+            cursor: pointer;
+        }
+        body.light select { background: #fff; color: #333; }
         .card {
             background: #2a2a2a;
             border-radius: 15px;
             padding: 15px;
+            margin-top: 10px;
             transition: transform 0.3s, box-shadow 0.3s;
-            cursor: pointer;
         }
         body.light .card { background: #fff; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
         .card:hover {
             transform: translateY(-5px);
             box-shadow: 0 6px 12px rgba(0,0,0,0.3);
         }
-        .card h3 { font-size: 1.3em; margin-bottom: 10px; }
         .card-content { display: none; }
         .card.active .card-content { display: block; }
         .link-item {
@@ -105,6 +113,24 @@
         .copy-btn:hover { background: #e6006b; }
         .last-updated { font-size: 0.9em; color: #bbb; margin-top: 5px; }
         body.light .last-updated { color: #666; }
+        .analytics {
+            margin: 20px 0;
+            text-align: center;
+        }
+        .analytics-bar {
+            width: 100%;
+            max-width: 600px;
+            height: 20px;
+            background: #333;
+            border-radius: 10px;
+            overflow: hidden;
+            margin: 10px auto;
+        }
+        .analytics-fill {
+            height: 100%;
+            background: #ff007a;
+            transition: width 0.5s ease;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -115,8 +141,7 @@
         @media (max-width: 600px) {
             header h1 { font-size: 1.8em; }
             header p { font-size: 1em; }
-            .categories { grid-template-columns: 1fr; }
-            .card { padding: 10px; }
+            select { max-width: 100%; }
             .link-item { flex-direction: column; align-items: flex-start; }
             .copy-btn { margin-top: 5px; }
         }
@@ -133,11 +158,23 @@
         <div class="search-bar">
             <input type="text" id="search" placeholder="Search channels..." onkeyup="filterLinks()">
         </div>
-        <div id="live-tv" class="categories">
+        <div class="dropdown-section">
             <h2>Live TV</h2>
+            <select id="live-tv-select" onchange="showLiveTV(this.value)">
+                <option value="">Select Country</option>
+            </select>
+            <div id="live-tv-content" class="card"></div>
         </div>
-        <div id="movies" class="categories">
+        <div class="dropdown-section">
             <h2>Movies</h2>
+            <select id="movies-select" onchange="showMovies(this.value)">
+                <option value="">Select Category</option>
+            </select>
+            <div id="movies-content" class="card"></div>
+        </div>
+        <div class="analytics">
+            <h2>Link Analytics</h2>
+            <div id="analytics-container"></div>
         </div>
     </div>
     <footer>
@@ -145,18 +182,13 @@
     </footer>
 
     <script>
-        // Dynamic base URL for serving .m3u files
-        const currentHost = window.location.hostname;
-        const isNetlify = currentHost.includes('netlify.app');
-        const isGitHubPages = currentHost.includes('github.io');
-        const baseUrl = isNetlify ? 'https://tvm3u.netlify.app/' : 
-                       isGitHubPages ? 'https://bugsfreeweb.github.io/LiveTVCollector/' : 
-                       '/'; // Fallback to relative path for local testing
+        const baseUrl = window.location.hostname.includes('netlify.app') ? 'https://tvm3u.netlify.app/' : 
+                       window.location.hostname.includes('github.io') ? 'https://bugsfreeweb.github.io/LiveTVCollector/' : 
+                       '/';
         const rawBaseUrl = 'https://raw.githubusercontent.com/bugsfreeweb/LiveTVCollector/main/';
+        let analytics = { liveTv: {}, movies: {} };
 
-        async function fetchJson(dir, subDir) {
-            const jsonFile = dir === 'LiveTV' ? 'LiveTV.json' : 'Movies.json';
-            const url = `${rawBaseUrl}${dir}/${subDir}/${jsonFile}`;
+        async function fetchJson(url) {
             try {
                 const response = await fetch(url);
                 if (!response.ok) throw new Error(`HTTP ${response.status}`);
@@ -167,42 +199,75 @@
             }
         }
 
-        function createCard(containerId, dir, subDir) {
-            const container = document.getElementById(containerId);
-            fetchJson(dir, subDir).then(json => {
-                if (json) {
-                    const card = document.createElement('div');
-                    card.className = 'card';
-                    const m3uFile = dir === 'LiveTV' ? 'LiveTV.m3u' : 'Movies.m3u';
-                    card.innerHTML = `
-                        <h3>${subDir}</h3>
-                        <div class="card-content">
-                            ${Object.entries(json.channels).flatMap(([group, channels]) => 
-                                channels.map(channel => `
-                                    <div class="link-item" data-text="${channel.name.toLowerCase()} ${group.toLowerCase()}">
-                                        <a href="${dir}/${subDir}/${m3uFile}" target="_blank">${channel.name} (${group})</a>
-                                        <button class="copy-btn" onclick="copyToClipboard('${baseUrl}${dir}/${subDir}/${m3uFile}')">Copy</button>
-                                    </div>
-                                `).join('')
-                            ).join('')}
-                            <div class="last-updated">Last Updated: ${json.date}</div>
-                        </div>
-                    `;
-                    card.addEventListener('click', (e) => {
-                        if (!e.target.classList.contains('copy-btn')) {
-                            card.classList.toggle('active');
-                        }
-                    });
-                    container.appendChild(card);
-                } else {
-                    console.warn(`No data for ${subDir} in ${dir}`);
-                }
-            });
+        async function populateDropdowns() {
+            const liveTvIndex = await fetchJson(`${rawBaseUrl}LiveTV/index.json`);
+            const moviesIndex = await fetchJson(`${rawBaseUrl}Movies/index.json`);
+            const liveTvSelect = document.getElementById('live-tv-select');
+            const moviesSelect = document.getElementById('movies-select');
+
+            if (liveTvIndex) {
+                liveTvIndex.forEach(country => {
+                    const option = document.createElement('option');
+                    option.value = country;
+                    option.textContent = country;
+                    liveTvSelect.appendChild(option);
+                });
+            }
+            if (moviesIndex) {
+                moviesIndex.forEach(category => {
+                    const option = document.createElement('option');
+                    option.value = category;
+                    option.textContent = category;
+                    moviesSelect.appendChild(option);
+                });
+            }
         }
 
-        function copyToClipboard(text) {
+        function createCardContent(json, dir, subDir) {
+            const m3uFile = dir === 'LiveTV' ? 'LiveTV.m3u' : 'Movies.m3u';
+            return `
+                <div class="card-content">
+                    ${Object.entries(json.channels).flatMap(([group, channels]) => 
+                        channels.map(channel => `
+                            <div class="link-item" data-text="${channel.name.toLowerCase()} ${group.toLowerCase()}">
+                                <a href="${dir}/${subDir}/${m3uFile}" target="_blank" onclick="trackLink('${dir}', '${subDir}')">${channel.name} (${group})</a>
+                                <button class="copy-btn" onclick="copyToClipboard('${baseUrl}${dir}/${subDir}/${m3uFile}', '${dir}', '${subDir}')">Copy</button>
+                            </div>
+                        `).join('')
+                    ).join('')}
+                    <div class="last-updated">Last Updated: ${json.date}</div>
+                </div>
+            `;
+        }
+
+        async function showLiveTV(country) {
+            const content = document.getElementById('live-tv-content');
+            content.innerHTML = '';
+            if (country) {
+                const json = await fetchJson(`${rawBaseUrl}LiveTV/${country}/LiveTV.json`);
+                if (json) {
+                    content.innerHTML = createCardContent(json, 'LiveTV', country);
+                    content.classList.add('active');
+                }
+            }
+        }
+
+        async function showMovies(category) {
+            const content = document.getElementById('movies-content');
+            content.innerHTML = '';
+            if (category) {
+                const json = await fetchJson(`${rawBaseUrl}Movies/${category}/Movies.json`);
+                if (json) {
+                    content.innerHTML = createCardContent(json, 'Movies', category);
+                    content.classList.add('active');
+                }
+            }
+        }
+
+        function copyToClipboard(text, dir, subDir) {
             navigator.clipboard.writeText(text).then(() => {
                 alert('Link copied!');
+                trackLink(dir, subDir, 'copy');
             }).catch(err => console.error('Copy failed:', err));
         }
 
@@ -216,15 +281,35 @@
 
         function toggleTheme() {
             document.body.classList.toggle('light');
-            const button = document.querySelector('.theme-toggle');
-            button.textContent = document.body.classList.contains('light') ? '🌙' : '☀️';
+            document.querySelector('.theme-toggle').textContent = document.body.classList.contains('light') ? '🌙' : '☀️';
         }
 
-        // Populate sections
-        const liveTvCountries = ['India', 'Indonesia', 'Bangladesh'];
-        const movieCategories = ['Worldwide'];
-        liveTvCountries.forEach(country => createCard('live-tv', 'LiveTV', country));
-        movieCategories.forEach(category => createCard('movies', 'Movies', category));
+        function trackLink(dir, subDir, action = 'click') {
+            const key = `${dir}/${subDir}`;
+            analytics[dir.toLowerCase()][key] = analytics[dir.toLowerCase()][key] || { clicks: 0, copies: 0 };
+            analytics[dir.toLowerCase()][key][action === 'click' ? 'clicks' : 'copies']++;
+            updateAnalytics();
+        }
+
+        function updateAnalytics() {
+            const container = document.getElementById('analytics-container');
+            container.innerHTML = '';
+            ['liveTv', 'movies'].forEach(type => {
+                const data = analytics[type];
+                Object.entries(data).forEach(([key, { clicks, copies }]) => {
+                    const total = clicks + copies;
+                    const bar = document.createElement('div');
+                    bar.innerHTML = `
+                        <p>${key}: ${clicks} clicks, ${copies} copies</p>
+                        <div class="analytics-bar"><div class="analytics-fill" style="width: ${Math.min(total * 10, 600)}px;"></div></div>
+                    `;
+                    container.appendChild(bar);
+                });
+            });
+        }
+
+        // Initialize
+        populateDropdowns();
     </script>
 </body>
 </html>
